walletrpc: add ListLeases
