# lnrpc/walletrpc/walletkit.swagger.json
@@ -560,6 +560,29 @@
         ]
       }
     },
+    "/v2/wallet/utxos/leases": {
+      "post": {
+        "summary": "ListLeases lists all currently locked utxos.",
+        "operationId": "WalletKit_ListLeases",
+        "responses": {
+          "200": {
+            "description": "A successful response.",
+            "schema": {
+              "$ref": "#/definitions/walletrpcListLeasesResponse"
+            }
+          },
+          "default": {
+            "description": "An unexpected error response.",
+            "schema": {
+              "$ref": "#/definitions/runtimeError"
+            }
+          }
+        },
+        "tags": [
+          "WalletKit"
+        ]
+      }
+    },
     "/v2/wallet/utxos/release": {
       "post": {
         "summary": "ReleaseOutput unlocks an output, allowing it to be available for coin\nselection if it remains unspent. The ID should match the one used to\noriginally lock the output.",
@@ -1185,6 +1208,18 @@
           "items": {
             "$ref": "#/definitions/walletrpcAccount"
           }
+        }
+      }
+    },
+    "walletrpcListLeasesResponse": {
+      "type": "object",
+      "properties": {
+        "locked_utxos": {
+          "type": "array",
+          "items": {
+            "$ref": "#/definitions/walletrpcUtxoLease"
+          },
+          "description": "The list of currently leased utxos."
         }
       }
     },
